[tool.poetry]
name = "chester_ml"
version = "1.0.5"
description = "A demo project for scikit-learn"
authors = ["carlos de silvestri"]

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
scikit-learn = "*"
loguru = "*"
python-dotenv = "*"
matplotlib = "^3.10.7"
sqlalchemy = "^2.0.44"
mysql-connector-python = "^9.5.0"
pymongo = "^4.15.4"

[tool.poetry.scripts]
chester = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
